Bug 464007 - "No titlebar and frame" property in Window Rules KCM is called "no border" in context menu
Summary: "No titlebar and frame" property in Window Rules KCM is called "no border" in...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: decorations (other bugs)
Version First Reported In: 5.26.5
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2023-01-08 15:40 UTC by David
Modified: 2023-01-09 23:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David 2023-01-08 15:40:56 UTC
SUMMARY
If I right-click a titlebar and choose "More Actions", there is a button "No border" that I  can use as configuration for said window for the rest of its lifetime, but this setting cannot be set as a window rule for the window manager.

STEPS TO REPRODUCE
1. Open some app.
2. Right-click the title bar.
3. Select "More Actions" -> "Configure Special Application Settings" -> "Add Property".

OBSERVED RESULT
Doesn't offer "No border" as a property to add there.

EXPECTED RESULT
Should let me add property "No border".

SOFTWARE/OS VERSIONS
Operating System: Debian GNU/Linux
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7
Kernel Version: 5.18.0-4-amd64 (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 2700 Eight-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX Vega
Manufacturer: Acer
Product Name: Predator PH517-61
System Version: V1.09
Comment 1 Nate Graham 2023-01-09 22:15:05 UTC
It's called "No titlebar and frame" in the Window Rules KCM.

Since these strings don't match, we should probably make them match to eliminate this confusion.
Comment 2 Bug Janitor Service 2023-01-09 22:20:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3411
Comment 3 Nate Graham 2023-01-09 23:12:52 UTC
Git commit 0075f7bd16b1c873bf8e4a73d589cfb9354b0f01 by Nate Graham.
Committed on 09/01/2023 at 22:16.
Pushed by ngraham into branch 'master'.

Use more user-friendly terminology for border actions everywhere

The window rules KCM calls this "No titlebar and frame", but different
less user-friendly terminology is used for the context menu action and
the global action. Let's unify them using the more user-friendly name.
FIXED-IN: 5.27

M  +2    -2    src/useractions.cpp

https://invent.kde.org/plasma/kwin/commit/0075f7bd16b1c873bf8e4a73d589cfb9354b0f01